--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.22.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
+        "santigarcor/laratrust": "^6.1",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
